app/assets/stylesheets/main.scss
$title-font: 'League Gothic', 'Arial Narrow', Arial, sans-serif;
$body-font: 'Raleway', Arial, sans-serif;
$text-color: #000;
$border-color: #000;
$highlight-color: #F63;
$light-background: #bbb;

@font-face {
    font-family: 'League Gothic';
    src: font-url('leaguegothic-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Raleway';
    src: font-url('Raleway-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

html, body {
    height: 100%;
    margin: 0;
}

body {
    font-family: $body-font;

}

p {
    margin: 1em 0em;
}

strong {
    font-weight: bold;
}

header#title {
    text-align: center;
    a {
        text-decoration: none;
    }
	h1 {
    	font-family: $title-font;
        font-size: calc(3rem + 3vw);
        margin: 0.25em;
        color: $highlight-color;
	}
    nav {
        background-color: #000;
        padding: 0.5em 0em;
        li {
            margin: 0em 1em 0em 1em;
    	    display: inline;
            a {
                color: $highlight-color;
    		}
    	}
    }
}

main {
    margin: 0 auto;
    padding: 2em;
    max-width: 100em;
    h1, h2, h3, h4, h5, h6 {
        font-weight: bold;
        font-size: 2em;
    }
    h2 {
        font-size: 1.6em;
    }
    h3 {
        font-size: 1.3em;
    }
    h4, h5, h6 {
        font-size: 1em;
    }

    ul#userOptions {
        margin: 2em 0em 2em 0em;
		li {
            border: 1px solid $border-color;
            padding: 0.5em;
            display: inline;
            list-style-type: none;
        }
    }
}

form {
    .header {
        display: block;
        font-weight: bold;
        padding: .5em 0em;
    }
}

ol.ads {
    li {
        border-bottom: 1px solid $border-color;
        padding: 1em 0em;
        margin: 1em 0em;
        div {
            margin: .2em 0em;
        }
        .h {
            font-weight: bold;
        }
        .timestamp {
            text-align: right;
        }
    }
    h4 {
        font-weight: bold;
    }
}

.alert {
    display: block;
    margin: 0 auto;
    text-align: center;
    background-color: $highlight-color;
    border-color: $border-color;
    padding: .5em;
    border-radius: 1em;
}

#messagesFrameButton {
    position: fixed;
    bottom: .1em;
    right: .1em;
    background-color: $highlight-color;
    border-radius: 1em;
    font-size: 4em;
    color: $light-background;
    padding: .2em;
}

#messagesFrame {
    display: none;
    background-color: #fff;
    border: 1px solid #000;
    position: fixed;
    bottom: 25px;
    right: 5px;
    height: 60%;
    width: 25%;
    div[id^='chat-'] {
        height: 100%;
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: auto 1fr auto;
        grid-template-areas: 'header'
                             'main'
                             'footer';
    }
    #chatHeader {
        grid-area: header;
        background-color: $highlight-color;
        padding: .2em;
        color: #fff;
        a:link, a:visited {
            color: #fff;
            text-decoration: none;
            font-size: 2em;
        }
        h2 {
            display: inline;
        }
    }
    #chatForm {
        grid-area: footer;
        background-color: $light-background;
        textarea {
            width: 80%;
            font-family: $body-font;
            resize: none;
            overflow: auto;
        }
    }
    ol#messages, ol#chats {
        grid-area: main;
        overflow: auto;
        li.message, li.chat {
            border: 1px solid $border-color;
            border-radius: 1em;
            margin: .2em;
            padding: .5em;
        }
        li.message {
            margin-left: 5.5em;
        }
        li.unread {
            border: 1px solid $highlight-color;
        }
        .text {
            display:block;
            margin: 0;
        }
        .time {
            font-size: .6em;
            display: block;
            text-align: right;
            color: $light-background;
        }
        a {
            color: $text-color;
            text-decoration: none;
        }
        .ad {
            font-weight: bold;
            display: block;
        }
        .from {
            position: sticky;
            top: 0;
            float: left;
            clear: both;
        }
        hr {
            clear: both;
        }
    } 
}

.user {
    background-color: $light-background;
    border-radius: 1em;
    height: 100%;
    display: inline flex;
    align-items: center;
    img {
        display: inline;
    }
    .text {
        padding: .5em;
    }
}

#userHeader {
    display: flex;
    background-color: $light-background;
    #userDescription {
        display: block;
        margin: 1em 0em;
    }
    #userHeaderText {
        padding: 1em;
    }
}
#userContent {
    padding-top: 1em;
    clear: both;
    display: block;
}

